[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinelx-sdk"
version = "0.1.0"
description = "Pre-execution enforcement at the commit boundary"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["enforcement", "ai-safety", "agents", "scada", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://sentinelx.ai"
Repository = "https://github.com/xinfra-ai/sentinelx-py"
